--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "antd": "^5.0.1",
     "axios": "^1.2.0",
     "immer": "^9.0.16",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
